# RothAlogorithm

./: .gitignore  CMakeLists.txt  main.c  validators.c  validators.h
ariphmetics_operations/: ariphmeticValidators.c  ariphmeticValidators.h  performCalculation.c  performCalculation.h  rpnImplementation.c  rpnImplementation.h  stackImplementation.c  stackImplementation.h
convert/: convertValidator.c  convertValidator.h  performConvert.c  performConvert.h
rota_minimization/: fileHandling.c  fileHandling.h  performRota.c  performRota.h  preset.txt  rotaOperation.c  rotaOperation.h  rotaTable.c  rotaTable.h  setsImplementation.c  setsImplementation.h
test/: calc.c
